# py-license-suite

./: .gitignore  README.md  cli.py  gui.py  pyproject.toml  requirements.txt
config/: config.example.yaml
core/: builder.py  config_loader.py  crypto_utils.py  project_manager.py
templates/: anti_tampering.py  hardware.py  security.py
